# Games101-Work

Assignment1/WORK1/: CMakeLists.txt  main.cpp  rasterizer.hpp
Assignment2/WORK/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp
Assignment3/Code/: CMakeLists.txt  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp
Assignment4/code/: main.cpp
Assignment5/Code/: Renderer.cpp
Assignment6/Code/: BVH.cpp  BVH.hpp  Bounds3.hpp  Ray.hpp  Renderer.cpp
Assignment7/Code/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Matrix.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  main.cpp
Hw5/Code/: Triangle.hpp
PA6/Assignment6/: Bounds3.hpp  Renderer.cpp  Triangle.hpp
pa0/: CMakeLists.txt  main.cpp
